// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return footer when user is NOT connected 1`] = `
<div
  id="footer"
>
  
            
  <h3>
    Besoin d'aide ?
  </h3>
  
            
  <p>
    Contact | Plan | Connexion
  </p>
  
        
</div>
`;

exports[`should return footer when user is connected 1`] = `
<div
  id="footer"
>
  
            
  <h3>
    Besoin d'aide ?
  </h3>
  
            
  <p>
    Contact | Plan | Deconnexion
  </p>
  
        
</div>
`;
